--- a/src/Pages/Shared/Footer/Footer.css
+++ b/src/Pages/Shared/Footer/Footer.css
@@ -1,9 +1,19 @@
 
 #footer {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 20px;
+    padding: 10px;
     background-color: black;
     color: white;
     position: absolute;
-    width: 100%;
+    width: 100%; 
     margin-bottom: 0px;
     text-align: center;
+}
+
+#footer-img {
+    width: 50px;
+    height: 50px;
+    border-radius: 40px;
 }
