--- a/src/Pages/Home/Home.css
+++ b/src/Pages/Home/Home.css
@@ -8,3 +8,10 @@
 #animals {
     border-radius: 40px;
 }
+
+@media only screen and (max-width:576px) {
+    #services {
+        display: grid;
+        grid-template-columns: repeat(1, 1fr);
+    }
+}
